--- a/Ask4/index.html
+++ b/Ask4/index.html
@@ -41,19 +41,22 @@
                         κινητά τηλέφωνα, υπολογιστές και εξαρτήματα, περιφερειακά, οικιακές συσκευές και άλλα.</p>
                     <p>Έτσι, μέσα σε λίγους μήνες, έχει καταξιωθεί ως ένα από τα πιο αγαπημένα καταστήματα τεχνολογίας στην ελληνική αγορά.</p>
                     <div class="img-text-wrapper">
-                        <img src="../assets/main_smartphones.jpg" class="main-page-image">
+                        <img srcset="../assets/main_smartphones_small.jpg 500w, ../assets/main_smartphones.jpg 1400w"
+                             src="../assets/main_smartphones.jpg" class="main-page-image" alt="smartphones">
                         <p>Έχουμε <a href="javascript:void(0);">κινητά τηλέφωνα</a> για όλες τις ανάγκες, από χαλαρούς χρήστες που θέλουν ένα απλό
                             τηλέφωνο για καθημερινή χρήση, μέχρι τους πιο hardcore fans των mobile παιχνιδιών!</p>
                     </div>
                     <div class="img-text-wrapper">
-                        <img src="../assets/main_laptops.jpg" class="main-page-image">
+                        <img srcset="../assets/main_laptops_small.jpg 500w, ../assets/main_laptops.jpg 1000w"
+                             src="../assets/main_laptops.jpg" class="main-page-image" alt="laptops">
                         <p>Έχουμε <a href="products-laptops.html">laptops</a> όλων των ειδών και μεγεθών. Είτε θέλεις ένα gaming laptop για να
                             αντικαταστήσεις τον προσωπικό σου υπολογιστή, είτε προτιμάς ένα laptop που
                             θα μπορείς να μεταφέρεις εύκολα στη δουλειά ή στη σχολή, θα το βρεις <a href="products-laptops.html">εδώ</a>!
                         </p>
                     </div>
                     <div class="img-text-wrapper">
-                        <img src="../assets/main_computer_parts.jpg" class="main-page-image">
+                        <img srcset="../assets/main_computer_parts_small.jpg 500w, ../assets/main_computer_parts.jpg 526w"
+                             src="../assets/main_computer_parts.jpg" class="main-page-image" alt="computer parts">
                         <p>Αν θέλεις να φτιάξεις τον δικό σου υπολογιστή, προσαρμοσμένο στα δικά σου μέτρα,
                             μπορείς να βρεις στο κατάστημά μας όλα τα απαραίτητα <a href="javascript:void(0);">εξαρτήματα</a>
                             που θα χρειαστείς, όπως <a href="products-graphics_cards.html">κάρτα γραφικών</a>,
@@ -61,7 +64,8 @@
                         </p>
                     </div>
                     <div class="img-text-wrapper">
-                        <img src="../assets/main_household_appl.jpg" class="main-page-image">
+                        <img srcset="../assets/main_household_appl_small.jpg 500w, ../assets/main_household_appl.jpg 780w"
+                             src="main_household_appl.jpg" class="main-page-image" alt="household appliances">
                         <p>Αν είσαι φοιτητής και μετακόμισες στο καινούριο σου σπίτι, ή αν απλά
                             έγινε σεισμός 7 ρίχτερ στην περιοχή σου, χρειάζεσαι <a href="javascript:void(0);">οικιακές συσκευές</a>.
                             Στο Take A Byte θα βρεις όλες τις συσκευές που χρειάζεσαι για να εξοπλίσεις το
@@ -83,25 +87,25 @@
 
 
         <footer class="site-footer">
-            <section class="left-footer-info">
+            <div class="left-footer-info">
                 <h3>Πληροφορίες Επικοινωνίας</h3>
                 <p>28ης Οκτωβρίου 76, Αθήνα, 10434</p>
                 <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.272595569044!2d23.729929915656633!3d37.994101707282745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2cc954f82ed%3A0x5795a212958689bb!2s28is%20Oktovriou%2076%2C%20Athina%20104%2034!5e0!3m2!1sen!2sgr!4v1669470073265!5m2!1sen!2sgr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p>Τηλ: <a href="tel: 210 8203 124">210 8203 124</a></p>
-            </section>
-            <section class="middle-footer-links">
+                <p>Τηλ: <a href="tel:%20210%208203%20124">210 8203 124</a></p>
+            </div>
+            <div class="middle-footer-links">
                 <ul class="site-footer-list">
                     <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" ></a></li>
                     <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" ></a></li>
-                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
+                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage%20Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
                 </ul>
                 <span class="copyright">Take A Byte © 2022</span>
-            </section>
-            <section class="right-footer-open">
+            </div>
+            <div class="right-footer-open">
                 <table class="opening-hours-table">
                     <thead>
                         <tr>
-                            <th colspan="2"><h3>Ώρες Λειτουργίας</h3></th>
+                            <th colspan="2"><span class="table-header">Ώρες Λειτουργίας</span></th>
                         </tr>
                     </thead>
                     <tr>
@@ -117,7 +121,7 @@
                         <td>Κλειστά</td>
                     </tr>
                 </table>
-            </section>
+            </div>
         </footer>
 
     </body>
