--- a/Ask4/product-Dell_Vostro_3500.html
+++ b/Ask4/product-Dell_Vostro_3500.html
@@ -46,7 +46,7 @@
             <div class="content-wrapper">
                 <article class="product">
                     <section class="product-info">
-                        <img class="product-image" src = "../assets/laptop1.jpg">
+                        <img class="product-image" src = "../assets/laptop1.jpg" alt="product image">
                         <h2>Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard)</h2>
                             <ul>
                                 <li>Κωδικός Προϊόντος: 010601</li>
@@ -62,7 +62,8 @@
                             και λεπτομέρεια έχει η εικόνα αλλά παράλληλα αυξάνεται και η κατανάλωση ενέργειας.
                         </p>
                         <div class="img-text-wrapper">
-                            <img class="specs-image" src="../assets/laptop1_specs1.png">
+                            <img srcset="../assets/laptop1_specs1_small.png 500w, ../assets/laptop1_specs1.png 1200w"
+                                 src="../assets/laptop1_specs1.png" class="specs-image" alt="laptop 1 specs image 1">
                             <p>
                                 Ο επεξεργαστής που ενσωματώνει είναι ο Intel Core i3 1115G4 χρονισμένος στα 3Ghz της γενιάς Tiger Lake (11th Gen) (2021).
                                 Μπορεί να εκτελέσει απροβλημάτιστα εργασίες καθημερινής φύσεως όπως πλοήγηση στο διαδίκτυο,
@@ -176,11 +177,13 @@
                                     Kevin_Prenti
                                     <span class="review-date">10/08/2022 </span>
                                     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
+                                    <span class="review-stars">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                    </span>
                                 </header>
                                 <p>
                                     αυτο το λαπτοπ το πηρα πριν απο 1 χρονο και 2 μηνες και εχω να πω τα εξης.<br>
@@ -203,11 +206,13 @@
                                     erminaa
                                     <span class="review-date">20/07/2022</span>
                                     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
+                                    <span class="review-stars">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                    </span>
                                 </header>
                                 <p>
                                     Θα έβαζα 5 αστέρια αν η οθόνη του δεν χάλαγε μέσα σε 8 μήνες.<br>
@@ -222,11 +227,13 @@
                                     Giannis_Vrakas72
                                     <span class="review-date">21/06/2022 </span>
                                     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
+                                    <span class="review-stars">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                    </span>
                                 </header>
                                 <p>το έχω 1 χρόνο και δεν έχει προβλήματα. Αξίζει τα λεφτά του!!</p>
                             </article>
@@ -241,7 +248,7 @@
 
                 <article class="product-item">
                     
-                    <img src="../assets/laptop2.jpg">
+                    <img src="../assets/laptop2.jpg" alt="laptop 2">
                     <h2><a href="javascript:void(0);">HP 255 G8 15.6" FHD (Athlon-3150U/4GB/128GB SSD/W10 Pro) (US Keyboard)</a></h2>
                     <ul>
                         <li>Κωδικός Προϊόντος: 010602</li>
@@ -254,7 +261,7 @@
                 </article>
                 <article class="product-item">
                 
-                    <img src="../assets/laptop3.jpg">
+                    <img src="../assets/laptop3.jpg" alt="laptop 3">
                     <h2><a href="javascript:void(0);">Apple MacBook Air 13.3" (2020) IPS Retina Display (M1/8GB/256GB SSD) Space Gray (GR Keyboard)</a></h2>
                     <ul>
                         <li>Κωδικός Προϊόντος: 010603</li>
@@ -272,25 +279,25 @@
 
 
         <footer class="site-footer">
-            <section class="left-footer-info">
+            <div class="left-footer-info">
                 <h3>Πληροφορίες Επικοινωνίας</h3>
                 <p>28ης Οκτωβρίου 76, Αθήνα, 10434</p>
                 <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.272595569044!2d23.729929915656633!3d37.994101707282745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2cc954f82ed%3A0x5795a212958689bb!2s28is%20Oktovriou%2076%2C%20Athina%20104%2034!5e0!3m2!1sen!2sgr!4v1669470073265!5m2!1sen!2sgr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p>Τηλ: <a href="tel: 210 8203 124">210 8203 124</a></p>
-            </section>
-            <section class="middle-footer-links">
+                <p>Τηλ: <a href="tel:%20210%208203%20124">210 8203 124</a></p>
+            </div>
+            <div class="middle-footer-links">
                 <ul class="site-footer-list">
                     <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" ></a></li>
                     <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" ></a></li>
-                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
+                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage%20Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
                 </ul>
                 <span class="copyright">Take A Byte © 2022</span>
-            </section>
-            <section class="right-footer-open">
+            </div>
+            <div class="right-footer-open">
                 <table class="opening-hours-table">
                     <thead>
                         <tr>
-                            <th colspan="2"><h3>Ώρες Λειτουργίας</h3></th>
+                            <th colspan="2"><span class="table-header">Ώρες Λειτουργίας</span></th>
                         </tr>
                     </thead>
                     <tr>
@@ -306,7 +313,7 @@
                         <td>Κλειστά</td>
                     </tr>
                 </table>
-            </section>
+            </div>
         </footer>
 
     </body>
