--- a/Ask4/product-categories.html
+++ b/Ask4/product-categories.html
@@ -43,9 +43,9 @@
                 <section id="product-categories">
                     <h2>Κατηγορίες Προϊόντων</h2>
                     <ol id="category-list">
-                        <section class="product-category">
-                            <li>
-                                <img src ="../assets/pc.jpg">
+                        <li>
+                            <section class="product-category">
+                                <img src ="../assets/pc.jpg" alt="pc and peripherals">
                                 <h3>Η/Υ και Περιφερειακές Συσκευές</h3>
                                 <ul>
                                     <li> Κουτιά Υπολογιστών </li>
@@ -55,11 +55,11 @@
                                     <li> Εξωτερικές Μονάδες Αποθήκευσης </li>
                                     <li class="product-link"><a href="products-laptops.html"> Laptops </a></li>
                                 </ul>
-                            </li>
-                        </section>
-                        <section class="product-category">
-                            <li>
-                                <img src ="../assets/upgrade.jpg">
+                            </section>
+                        </li>
+                        <li>
+                            <section class="product-category">
+                                <img src ="../assets/upgrade.jpg" alt="pc parts">
                                 <h3>Αναβαθμίσεις</h3>
                                 <ul>
                                     <li> Σκληροί δίσκοι </li>
@@ -69,11 +69,11 @@
                                     <li> Μητρικές Κάρτες </li>
                                     <li> Επεξεργαστές </li>
                                 </ul>
-                            </li>
-                        </section>
-                        <section class="product-category">
-                            <li>
-                                <img src ="../assets/network.jpg">
+                            </section>
+                        </li>
+                        <li>
+                            <section class="product-category">
+                                <img src ="../assets/network.jpg" alt="network">
                                 <h3>Network</h3>
                                 <ul>
                                     <li> Routers </li>
@@ -83,11 +83,11 @@
                                     <li> Κάρτες Δικτύου </li>
                                     <li> File Servers </li>
                                 </ul>
-                            </li>
-                        </section>
-                        <section class="product-category">
-                            <li>
-                                <img src ="../assets/phone.jpg">
+                            </section>
+                        </li>
+                        <li>
+                            <section class="product-category">
+                                <img src ="../assets/phone.jpg" alt="phones">
                                 <h3>Κινητά Τηλέφωνα και Tablets</h3>
                                 <ul>
                                     <li> Κινητά Τηλέφωνα </li>
@@ -97,11 +97,11 @@
                                     <li> Προπληρωμένες Κάρτες </li>
                                     <li> Ανταλλακτικά Κινητών </li>
                                 </ul>
-                            </li>
-                        </section>
-                        <section class="product-category">
-                            <li>
-                                <img src ="../assets/tv.jpg">
+                            </section>
+                        </li>
+                        <li>
+                            <section class="product-category">
+                                <img src ="../assets/tv.jpg" alt="tv">
                                 <h3>Τηλεοράσεις και Αξεσουάρ</h3>
                                 <ul>
                                     <li> Τηλεοράσεις </li>
@@ -109,11 +109,11 @@
                                     <li> Τηλεχειριστήρια Τηλεόρασης</li>
                                     <li> Αξεσουάρ TV</li>
                                 </ul>
-                            </li>
-                        </section>
-                        <section class="product-category">
-                            <li>
-                                <img src ="../assets/house.jpg">
+                            </section>
+                        </li>
+                        <li>
+                            <section class="product-category">
+                                <img src ="../assets/house.jpg" alt="household">
                                 <h3>Οικιακές Συσκευές</h3>
                                 <ul>
                                     <li> Θέρμανση & Κλιματισμός </li>
@@ -123,8 +123,8 @@
                                     <li> Καφετιέρες </li>
                                     <li> Συσκευές Επεξεργασίας Τροφίμων </li>
                                 </ul>
-                            </li>
-                        </section>
+                            </section>
+                        </li>
                     </ol>
                 </section>
             </div>
@@ -132,25 +132,25 @@
 
 
         <footer class="site-footer">
-            <section class="left-footer-info">
+            <div class="left-footer-info">
                 <h3>Πληροφορίες Επικοινωνίας</h3>
                 <p>28ης Οκτωβρίου 76, Αθήνα, 10434</p>
                 <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.272595569044!2d23.729929915656633!3d37.994101707282745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2cc954f82ed%3A0x5795a212958689bb!2s28is%20Oktovriou%2076%2C%20Athina%20104%2034!5e0!3m2!1sen!2sgr!4v1669470073265!5m2!1sen!2sgr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p>Τηλ: <a href="tel: 210 8203 124">210 8203 124</a></p>
-            </section>
-            <section class="middle-footer-links">
+                <p>Τηλ: <a href="tel:%20210%208203%20124">210 8203 124</a></p>
+            </div>
+            <div class="middle-footer-links">
                 <ul class="site-footer-list">
                     <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" ></a></li>
                     <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" ></a></li>
-                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
+                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage%20Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
                 </ul>
                 <span class="copyright">Take A Byte © 2022</span>
-            </section>
-            <section class="right-footer-open">
+            </div>
+            <div class="right-footer-open">
                 <table class="opening-hours-table">
                     <thead>
                         <tr>
-                            <th colspan="2"><h3>Ώρες Λειτουργίας</h3></th>
+                            <th colspan="2"><span class="table-header">Ώρες Λειτουργίας</span></th>
                         </tr>
                     </thead>
                     <tr>
@@ -166,7 +166,7 @@
                         <td>Κλειστά</td>
                     </tr>
                 </table>
-            </section>
+            </div>
         </footer>
 
     </body>
